<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_height="match_parent"
     android:layout_width="match_parent"
     android:orientation="vertical">

    <com.google.android.material.bottomsheet.BottomSheetDragHandleView
         android:layout_height="wrap_content"
         android:layout_width="match_parent"
         android:id="@+id/drag_handle" />

    <ScrollView
         android:layout_height="0dp"
         android:layout_width="match_parent"
         android:layout_weight="1">

        <LinearLayout
             android:layout_height="wrap_content"
             android:layout_width="match_parent"
             android:orientation="vertical">

            <TextView
                 android:layout_height="wrap_content"
                 android:layout_width="wrap_content"
                 android:textAppearance="?attr/textAppearanceTitleLarge"
                 android:layout_marginStart="24dp"
                 android:text="@string/create_new_project" />

            <com.google.android.material.textfield.TextInputLayout
                 android:layout_height="wrap_content"
                 android:layout_width="match_parent"
                 android:layout_marginEnd="24dp"
                 android:hint="@string/project_name"
                 android:layout_marginTop="24dp"
                 android:layout_marginStart="24dp">

                <com.google.android.material.textfield.TextInputEditText
                     android:layout_height="wrap_content"
                     android:layout_width="match_parent"
                     android:id="@+id/project_name" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                 android:layout_height="wrap_content"
                 android:layout_width="match_parent"
                 android:layout_marginBottom="24dp"
                 android:layout_marginEnd="24dp"
                 android:hint="@string/package_name"
                 android:layout_marginTop="12dp"
                 android:layout_marginStart="24dp">

                <com.google.android.material.textfield.TextInputEditText
                     android:layout_height="wrap_content"
                     android:layout_width="match_parent"
                     android:id="@+id/project_package" />

            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                 android:layout_height="wrap_content"
                 android:layout_width="match_parent"
                 android:layout_marginBottom="30dp"
                 android:gravity="center_vertical">

                <TextView
                     android:layout_height="wrap_content"
                     android:layout_width="wrap_content"
                     android:textAppearance="?attr/textAppearanceCaption"
                     android:textColor="?colorSecondary"
                     android:layout_marginStart="24dp"
                     android:text="@string/create_from_template" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

    <LinearLayout
         android:layout_height="wrap_content"
         android:layout_width="match_parent"
         android:layout_marginEnd="24dp"
         android:layout_marginVertical="8dp"
         android:gravity="center"
         android:orientation="horizontal"
         android:layout_marginStart="24dp">

        <Button
             android:layout_height="wrap_content"
             android:layout_width="0dp"
             android:layout_marginEnd="50dp"
             android:layout_weight="1"
             android:id="@+id/cancel"
             android:text="@string/common_word_cancel" />

        <Button
             android:layout_height="wrap_content"
             android:layout_width="0dp"
             android:layout_weight="1"
             android:id="@+id/next"
             android:text="@string/common_word_create" />

    </LinearLayout>

</LinearLayout>