<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_height="match_parent"
     android:layout_width="match_parent">

    <com.google.android.material.appbar.AppBarLayout
         android:layout_height="wrap_content"
         android:layout_width="match_parent"
         android:id="@+id/app_bar_layout">

        <com.google.android.material.appbar.MaterialToolbar
             android:layout_height="?attr/actionBarSize"
             android:layout_width="match_parent"
             app:title="@string/app_name"
             app:titleCentered="true"
             android:id="@+id/toolbar" />

    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
         android:layout_height="match_parent"
         android:layout_width="match_parent"
         app:layout_behavior="@string/appbar_scrolling_view_behavior"
         android:gravity="center_horizontal"
         android:padding="8dp"
         android:orientation="vertical"
         android:id="@+id/content">

        <LinearLayout
             android:layout_height="100dp"
             android:layout_width="wrap_content">

        </LinearLayout>

        <ImageView
             android:layout_height="70dp"
             android:layout_width="70dp"
             android:src="@drawable/ic_launcher_foreground"
             android:scaleType="centerCrop" />

        <TextView
             android:layout_height="wrap_content"
             android:layout_width="wrap_content"
             android:padding="8dp"
             android:textSize="16sp"
             android:text="@string/app_slogan" />

        <LinearLayout
             android:layout_height="50dp"
             android:layout_width="wrap_content">

        </LinearLayout>

        <LinearLayout
             android:layout_height="wrap_content"
             android:layout_width="match_parent"
             android:gravity="center"
             android:transitionGroup="true">

            <LinearLayout
                 android:layout_height="wrap_content"
                 android:layout_width="wrap_content"
                 android:layout_marginVertical="5dp"
                 android:gravity="center"
                 android:layout_marginHorizontal="10dp"
                 android:orientation="vertical">

                <com.google.android.material.card.MaterialCardView
                     android:layout_height="70dp"
                     android:layout_width="70dp"
                     android:clickable="true"
                     style="?attr/materialCardViewFilledStyle"
                     app:cardCornerRadius="16dp"
                     android:id="@+id/create_new">

                    <ImageView
                         android:layout_height="wrap_content"
                         android:layout_width="wrap_content"
                         android:src="@drawable/ic_mtrl_add"
                         android:layout_margin="10dp"
                         android:layout_gravity="center" />

                </com.google.android.material.card.MaterialCardView>

                <TextView
                     android:layout_height="wrap_content"
                     android:layout_width="wrap_content"
                     android:layout_marginVertical="5dp"
                     android:text="@string/common_word_create_new" />

            </LinearLayout>

            <LinearLayout
                 android:layout_height="wrap_content"
                 android:layout_width="wrap_content"
                 android:layout_marginVertical="5dp"
                 android:gravity="center"
                 android:layout_marginHorizontal="10dp"
                 android:orientation="vertical">

                <com.google.android.material.card.MaterialCardView
                     android:layout_height="70dp"
                     android:layout_width="70dp"
                     android:clickable="true"
                     style="?attr/materialCardViewFilledStyle"
                     app:cardCornerRadius="16dp"
                     android:id="@+id/projects">

                    <ImageView
                         android:layout_height="wrap_content"
                         android:layout_width="wrap_content"
                         android:src="@drawable/ic_mtrl_folder"
                         android:layout_margin="10dp"
                         android:layout_gravity="center" />

                </com.google.android.material.card.MaterialCardView>

                <TextView
                     android:layout_height="wrap_content"
                     android:layout_width="wrap_content"
                     android:layout_marginVertical="5dp"
                     android:text="@string/common_word_projects" />

            </LinearLayout>

            <LinearLayout
                 android:layout_height="wrap_content"
                 android:layout_width="wrap_content"
                 android:layout_marginVertical="5dp"
                 android:gravity="center"
                 android:orientation="vertical"
                 android:layout_marginLeft="10dp">

                <com.google.android.material.card.MaterialCardView
                     android:layout_height="70dp"
                     android:layout_width="70dp"
                     android:clickable="true"
                     style="?attr/materialCardViewFilledStyle"
                     app:cardCornerRadius="16dp"
                     android:id="@+id/settings">

                    <ImageView
                         android:layout_height="wrap_content"
                         android:layout_width="wrap_content"
                         android:src="@drawable/ic_mtrl_settings"
                         android:layout_margin="10dp"
                         android:layout_gravity="center" />

                </com.google.android.material.card.MaterialCardView>

                <TextView
                     android:layout_height="wrap_content"
                     android:layout_width="wrap_content"
                     android:layout_marginVertical="5dp"
                     android:text="@string/common_word_settings" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>